# prez-pkglog

./: .bumpversion.cfg  .clang-format  .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  prez-pkglog.spec  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
config/: prez_pkglog.conf
config/dnf5/: actions.conf
dnf5-plugin/: CMakeLists.txt  prez_pkglog_plugin.cpp
docs/man/: prez-pkglog.1
libdnf5-plugin/dnf5-plugin/: CMakeLists.txt
libdnf5-plugin/dnf5-plugin/actions.d/: prez_pkglog.actions
libdnf5-plugin/dnf5-plugin/packaging/: prez-pkglog-libdnf5.spec
libdnf5-plugin/dnf5-plugin/src/: prez_pkglog_plugin.cpp
packaging/archlinux/: PKGBUILD  prez-pkglog  prez-pkglog-hook.sh  prez-pkglog.hook
packaging/debian/: changelog  control  post-invoke-hook  prez-pkglog-apt.conf  prez-pkglog.conf  rules
src/prez_pkglog/: __init__.py  __main__.py  cli.py  config.py  dnf_plugin.py  exceptions.py  logger.py  models.py  package_backend.py  utils.py
src/prez_pkglog/backends/: __init__.py  base.py  dnf.py  helpers.py
src/prez_pkglog/backends/linux/: __init__.py  apt.py  dnf.py  pacman.py
src/prez_pkglog/backends/macos/: __init__.py  brew.py
src/prez_pkglog/backends/windows/: __init__.py  chocolatey.py  winget.py
src/prez_pkglog/hooks/dnf/: plugin.py
src/prez_pkglog/monitors/: __init__.py  downloads.py
src/prez_pkglog/utils/: platform.py
systemd-user/: prez-pkglog.service
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_dnf_backend.py
tests/unit/: __init__.py  test_apt_backend.py  test_backend_discovery.py  test_base_backend.py  test_cli.py  test_config.py  test_config_persistence.py  test_cpp_plugin.py  test_dnf_backend.py  test_downloads_monitor.py  test_hooks.py  test_logger.py  test_logger_locking.py  test_models.py  test_monitors.py  test_utils.py
