[project]
name = "prez-pkglog"
version = "0.5.3"
description = "Cross-platform package installation logger"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Prez", email = "154857421+P-R-E-Z@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "appdirs>=1.4.4",
    "pydantic>=2",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "bump2version>=1.0.1",
    "click>=8.2.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "rpm>=0.4.0",
    "setuptools>=80.9.0",
    "tito>=0.6.26",
    "typer>=0.16.0",
    "types-python-dateutil>=2.9.0.20250516",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
prez-pkglog = "prez_pkglog.cli:cli"
